--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
     .resume-section h2 {
       color: #3498db;
     }
+
+    .certifications-section {
+      padding: 40px;
+      margin: 20px;
+      background-color: white;
+      border-radius: 10px;
+    }
+    .certifications-section h2 {
+      color: #3498db;
+    }
+    .certifications-section ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    .certifications-section li {
+      margin-bottom: 10px;
+    }
     .portfolio-section img {
       width: 100%;
       border-radius: 10px;
@@ -95,6 +112,14 @@
       <li>CI/CD Pipelines - Jenkins, Github Actions</li>
       <li>Splunk</li>
       <li>Ansible</li>
+    </ul>
+  </section>
+
+  <section class="certifications-section">
+    <h2>Certifications</h2>
+    <ul>
+      <li>AWS Certified Developer – Associate</li>
+      <li>WS Certified Cloud Practitioner</li>
     </ul>
   </section>
 
